appId: com.example.soen345
---
- launchApp

- tapOn:
    id: "signupMainButton"

- tapOn:
    id: "fullName"
- inputText: "Jackson Smith"

- tapOn:
    id: "email"
- inputText: "jackson@email.com"

- tapOn:
    id: "phone"
- inputText: "5145551238"

- tapOn:
    id: "username"
- inputText: "jack"

- tapOn:
    id: "password"
- inputText: "123456"

- scrollUntilVisible:
    element:
      id: "roleAutoComplete"
    direction: DOWN

- tapOn:
    id: "roleAutoComplete"

- assertVisible:
    text: "Customer"

- tapOn:
    text: "Customer"

- tapOn:
    id: "signupButton"

- assertVisible: "Login"

- tapOn:
    id: "loginUsername"
- inputText: "jack"

- tapOn:
    id: "loginPassword"
- inputText: "123456"

# Submit login
- tapOn:
    id: "loginButton"

# Verify dashboard opened
- assertVisible: "Find your next event."

- tapOn:
    id: "navProfile"

- tapOn:
    id: "deleteAccountCard"